syntax = "proto3";

package BudgetCalculatorService.v1;

option go_package = "github.com/knzou/BudgetCalculatorService/v1";

message Request {
}

message GetCategoriesResponse {
  message Category {
    int64 catId = 1;
    string name = 2;
    int64 typeId = 3;
  }
  repeated Category categories = 1;
}

message GetTransactionsResponse {
  message Transaction {
    int64 catId = 1;
    string name = 2;
    int64 typeId = 3;
  }
  repeated Transaction transactions = 1;
}

service AddService {
  rpc getCategories(Request) returns (GetCategoriesResponse);
  rpc getTransactions(Request) returns (GetTransactionsResponse);
}